--- a/style.css
+++ b/style.css
@@ -86,8 +86,17 @@ body {
     color: white;
     padding: 10px;
     border-radius: 30px;
+    cursor: pointer;
+    border: solid #A435F0 1px
 
 }
+.categories p:hover{
+    transition: 1s;
+    background-color: transparent;
+    color:black;
+    border: solid #A435F0 1px
+}
+
 .sale-image{
     position: relative;
 }
@@ -103,6 +112,23 @@ body {
     top:10%;
     left: 10px;
     margin: 10%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+    0%{
+    transform: scale(0);
+    opacity:0;
+}
+
+100%{
+    opacity: 1;
+    tranform: scale(1);
+
+}
 }
 .recommended {
     padding: 10px;
